--- a/task_buddies_react_app-main/src/styles/Index.scss
+++ b/task_buddies_react_app-main/src/styles/Index.scss
@@ -16,10 +16,6 @@
 	-webkit-text-size-adjust: 100%;
 }
 
-#root {
-	width: 100%;
-}
-
 a {
 	font-weight: 500;
 	color: $blueDarkColor;
@@ -33,6 +29,7 @@ body {
 	margin: 0;
 	display: flex;
 	min-height: 100vh;
+	max-height: 100vh;
 }
 
 h1 {
@@ -81,6 +78,14 @@ input {
 	transition: border-color 0.25s;
 	padding: 14px 18px;
 	box-sizing: border-box;
+	width: 100%;
+}
+
+.inputContainer {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	margin-bottom: 24px;
 }
 
 input:focus,
@@ -93,4 +98,14 @@ input:focus-visible {
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
+}
+
+.dashboardPage {
+	display: flex;
+	flex-direction: wrap;
+	width: 100vw;
+	height: 100vh;
+	padding: 24px 32px;
+	box-sizing: border-box;
+	gap: 24px;
 }
