--- a/task_buddies_react_app-main/src/styles/Task.scss
+++ b/task_buddies_react_app-main/src/styles/Task.scss
@@ -10,6 +10,7 @@
 	justify-content: space-between;
 	transition: all 0.2s ease-in-out;
 	cursor: pointer;
+	width: 100%;
 }
 
 .taskTileContainer:hover {
@@ -25,4 +26,21 @@
 .validated {
 	text-decoration: line-through;
 	border-color: $blueDarkColor;
+}
+
+.componentContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 24px;
+	border-radius: 34px;
+	width: 33%;
+	border: solid 1px $grayColor;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
 }
