--- a/task_buddies_react_app-main/src/styles/Main.scss
+++ b/task_buddies_react_app-main/src/styles/Main.scss
@@ -3,5 +3,6 @@ $whiteColor: #f1f1f4;
 $grayColor: #575759;
 $grayDarkColor: #1f1f20;
 $blueDarkColor: #7193ed;
+$greenColor: #15ad70;
 
 $standardText: 14px;
