--- a/task_buddies_react_app-main/src/styles/Task.scss
+++ b/task_buddies_react_app-main/src/styles/Task.scss
@@ -11,6 +11,7 @@
 	transition: all 0.2s ease-in-out;
 	cursor: pointer;
 	width: 100%;
+	box-sizing: border-box;
 }
 
 .taskTileContainer:hover {
@@ -32,15 +33,97 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 24px;
 	border-radius: 34px;
 	width: 33%;
 	border: solid 1px $grayColor;
 }
 
-form {
+.componentHeader {
+	border-bottom: 1px solid $grayColor;
+	display: flex;
+
+	padding: 6px 24px 0px 24px;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+.bodyContainer {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	width: 100%;
+	padding: 24px;
+	box-sizing: border-box;
+}
+
+.checkboxesContainer {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-between;
+	padding: 12px 24px;
+	box-sizing: border-box;
+	background-color: $grayDarkColor;
+	border-radius: 34px;
+	gap: 12px;
+}
+
+#monthDayList {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	gap: 12px;
+	padding: 24px;
+}
+
+#monthDayList::after {
+	content: "";
+	flex: auto;
+}
+
+.checkbox-container {
+	position: relative;
+	font-weight: 600;
+	color: $whiteColor;
+}
+
+.checkbox-container input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+}
+
+.checkmark {
+	position: relative;
+	height: 32px;
+	width: 32px;
+	background-color: $grayColor;
+	border: none;
+	margin-right: 8px;
+	border-radius: 34px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.checkmark::after {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: $grayDarkColor;
+}
+
+.checkbox-container label {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.checkbox-container input:checked ~ .checkmark {
+	background-color: $greenColor;
+	border: none;
+}
+
+.checkbox-container input:checked ~ .checkmark::after {
+	color: #fff;
 }
