--- a/task_buddies_react_app-main/src/styles/Index.scss
+++ b/task_buddies_react_app-main/src/styles/Index.scss
@@ -16,6 +16,13 @@
 	-webkit-text-size-adjust: 100%;
 }
 
+div#root {
+	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	height: 100vh;
+}
+
 a {
 	font-weight: 500;
 	color: $blueDarkColor;
