Add tags on TaskList & add date on nav

--- a/task_buddies_react_app-main/src/styles/Navbar.scss
+++ b/task_buddies_react_app-main/src/styles/Navbar.scss
@@ -12,3 +12,41 @@
 	box-sizing: border-box;
 	background-color: $grayDarkColor;
 }
+
+.logoutBtn {
+	background-color: transparent;
+	color: $whiteColor;
+	border: none;
+	padding: 0;
+}
+
+.logoutBtn:hover {
+	color: $redColor;
+}
+
+.linkIcon {
+	color: $whiteColor;
+}
+
+.linkIcon.active {
+	color: $blueDarkColor;
+}
+
+.navbarLinks {
+	display: flex;
+	align-items: center;
+	gap: 24px;
+}
+
+.navbarDate {
+	color: $whiteColor;
+	font-size: 1em;
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.calendarIcon:hover {
+	color: $blueDarkColor;
+	cursor: pointer;
+}
