--- a/task_buddies_react_app-main/src/styles/Dashboard.scss
+++ b/task_buddies_react_app-main/src/styles/Dashboard.scss
@@ -34,7 +34,7 @@
 	flex-direction: column;
 	align-items: center;
 	border-radius: 34px;
-	width: 33%;
+	width: 25%;
 	border: solid 1px $grayColor;
 }
 
@@ -191,4 +191,14 @@
 	line-height: 6px;
 	font-size: 12px;
 	font-weight: 600;
+	white-space: nowrap;
+}
+
+.tagsContainer {
+	display: flex;
+	padding: 6px 24px 6px 24px;
+	width: 100%;
+	box-sizing: border-box;
+	overflow-x: scroll;
+	gap: 6px;
 }
