--- a/task_buddies_react_app-main/src/styles/Main.scss
+++ b/task_buddies_react_app-main/src/styles/Main.scss
@@ -4,5 +4,6 @@ $grayColor: #575759;
 $grayDarkColor: #1f1f20;
 $blueDarkColor: #7193ed;
 $greenColor: #15ad70;
+$redColor: #eb546f;
 
 $standardText: 14px;
