--- a/task_buddies_react_app-main/src/styles/Dashboard.scss
+++ b/task_buddies_react_app-main/src/styles/Dashboard.scss
@@ -1,304 +1,304 @@
 @import "Main.scss";
-
 .columnComponent {
-	display: flex;
-	flex-direction: column;
-	gap: 24px;
-	width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 100%;
 }
 
 .headerBtn {
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	padding: 0;
-	height: 20px;
-	width: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: 2s;
-	color: $whiteColor;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 2s;
+    color: $whiteColor;
 }
 
 .headerBtn svg {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .headerBtn:hover {
-	color: $blueDarkColor;
-	transform: rotate(1080deg);
+    color: $blueDarkColor;
+    transform: rotate(1080deg);
 }
 
 .closeHeaderBtn {
-	color: $redColor;
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	padding: 0;
-	height: 20px;
-	width: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: 2s;
-	animation: rotateIn 2s;
+    color: $redColor;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 2s;
+    animation: rotateIn 2s;
 }
 
 .closeHeaderBtn svg {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .closeHeaderBtn:hover {
-	color: $whiteColor;
-	transform: rotate(900deg);
+    color: $whiteColor;
+    transform: rotate(900deg);
 }
 
 @keyframes rotateIn {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(900deg);
-	}
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(900deg);
+    }
 }
 
 .taskTileContainer {
-	background-color: $grayDarkColor;
-	border-radius: 34px;
-	padding: 0px 18px;
-	margin: 5px 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	transition: all 0.2s ease-in-out;
-	cursor: pointer;
-	width: 100%;
-	box-sizing: border-box;
-	height: 46px;
+    background-color: $grayDarkColor;
+    border-radius: 34px;
+    padding: 0px 18px;
+    margin: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    width: 100%;
+    box-sizing: border-box;
+    height: 46px;
 }
 
 .groupIcons {
-	display: flex;
-	align-items: center;
-	gap: 12px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
 
 .taskTileContainer:hover {
-	background-color: $grayColor;
+    background-color: $grayColor;
 }
 
 .taskTileContent {
-	display: flex;
-	align-items: center;
-	gap: 12px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
 
 .taskTileButton {
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	height: 32px;
-	width: 32px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    height: 32px;
+    width: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .validated {
-	background-color: $blackColor;
+    background-color: $blackColor;
 }
 
 .componentContainer {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border-radius: 34px;
-	width: 100%;
-	height: 100%;
-	border: solid 1px $grayColor;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 34px;
+    width: 100%;
+    height: 100%;
+    border: solid 1px $grayColor;
 }
 
 .componentHeader {
-	border-bottom: 1px solid $grayColor;
-	display: flex;
-
-	padding: 6px 24px 0px 24px;
-	width: 100%;
-	box-sizing: border-box;
-
-	justify-content: space-between;
-	align-items: center;
+    border-bottom: 1px solid $grayColor;
+    display: flex;
+    padding: 6px 24px 0px 24px;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .bodyContainer {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	padding: 24px;
-	overflow-y: auto;
-	box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 24px;
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+.antiMalefice {
+    max-width: 500px;
 }
 
 .checkboxesContainer {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	justify-content: space-between;
-	padding: 12px 24px;
-	box-sizing: border-box;
-	background-color: $grayDarkColor;
-	border-radius: 34px;
-	gap: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+    padding: 12px 24px;
+    box-sizing: border-box;
+    background-color: $grayDarkColor;
+    border-radius: 34px;
+    gap: 12px;
 }
 
 #monthDayList {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	gap: 12px;
-	padding: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 12px;
+    padding: 24px;
 }
 
 #monthDayList::after {
-	content: "";
-	flex: auto;
+    content: "";
+    flex: auto;
 }
 
 .checkbox-container {
-	position: relative;
-	font-weight: 600;
-	color: $whiteColor;
+    position: relative;
+    font-weight: 600;
+    color: $whiteColor;
 }
 
 .checkbox-container input {
-	position: absolute;
-	opacity: 0;
-	cursor: pointer;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
 }
 
 .checkmark {
-	position: relative;
-	height: 32px;
-	width: 32px;
-	background-color: $grayColor;
-	border: none;
-	margin-right: 8px;
-	border-radius: 34px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    position: relative;
+    height: 32px;
+    width: 32px;
+    background-color: $grayColor;
+    border: none;
+    margin-right: 8px;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .checkmark::after {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: $grayDarkColor;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $grayDarkColor;
 }
 
 .checkbox-container label {
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-.checkbox-container input:checked ~ .checkmark {
-	background-color: $greenColor;
-	border: none;
+.checkbox-container input:checked~.checkmark {
+    background-color: $greenColor;
+    border: none;
 }
 
-.checkbox-container input:checked ~ .checkmark::after {
-	color: #fff;
+.checkbox-container input:checked~.checkmark::after {
+    color: #fff;
 }
 
 .tagIcon {
-	background-color: transparent;
-	width: 30px;
-	height: 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tagColor {
-	width: 17px;
-	height: 17px;
-	border-radius: 50%;
-	padding: 0;
-	margin: 4px;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    padding: 0;
+    margin: 4px;
 }
 
 .iconContainer {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-
-	gap: 8px;
-	padding: 24px;
-	box-sizing: border-box;
-	background-color: $grayDarkColor;
-	border-radius: 34px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+    padding: 24px;
+    box-sizing: border-box;
+    background-color: $grayDarkColor;
+    border-radius: 34px;
 }
 
 .colorContainer {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	padding: 24px;
-	box-sizing: border-box;
-	background-color: $grayDarkColor;
-	border-radius: 34px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 24px;
+    box-sizing: border-box;
+    background-color: $grayDarkColor;
+    border-radius: 34px;
 }
 
 .colorContainer::after {
-	content: "";
-	flex: auto;
+    content: "";
+    flex: auto;
 }
 
 .iconContainer::after {
-	content: "";
-	flex: auto;
+    content: "";
+    flex: auto;
 }
 
 .tagTileContainer {
-	display: flex;
-	align-items: center;
-	border: solid 1px $grayColor;
-	width: fit-content;
-	padding: 0px 10px 0px 0px;
-	border-radius: 34px;
+    display: flex;
+    align-items: center;
+    border: solid 1px $grayColor;
+    width: fit-content;
+    padding: 0px 10px 0px 0px;
+    border-radius: 34px;
 }
 
 .tagTileContainer.active {
-	border: solid 1px $blueDarkColor;
+    border: solid 1px $blueDarkColor;
 }
 
 .tagTitle {
-	line-height: 6px;
-	font-size: 12px;
-	font-weight: 600;
-	white-space: nowrap;
+    line-height: 6px;
+    font-size: 12px;
+    font-weight: 600;
+    white-space: nowrap;
 }
 
 .tagsContainer {
-	display: flex;
-	padding: 6px 24px 6px 24px;
-	width: 100%;
-	box-sizing: border-box;
-	overflow-x: auto;
-	gap: 6px;
-	border-bottom: 1px solid $grayColor;
+    display: flex;
+    padding: 6px 24px 6px 24px;
+    width: 100%;
+    box-sizing: border-box;
+    overflow-x: auto;
+    gap: 6px;
+    border-bottom: 1px solid $grayColor;
 }
 
 .tagColor.active {
-	border: solid 2px $whiteColor;
+    border: solid 2px $whiteColor;
 }
 
 .tagIcon.active {
-	border: solid 2px $whiteColor;
+    border: solid 2px $whiteColor;
 }
