--- a/task_buddies_react_app-main/src/styles/Dashboard.scss
+++ b/task_buddies_react_app-main/src/styles/Dashboard.scss
@@ -4,7 +4,68 @@
 	flex-direction: column;
 	gap: 24px;
 	height: 100%;
-	width: 20%;
+	width: 30%;
+}
+
+#firstColumn {
+	width: 30%;
+}
+
+#secondColumn {
+	width: 25%;
+}
+
+#thirdColumn {
+	width: 45%;
+}
+
+#taskFormComponent {
+	width: 30%;
+}
+
+#taskListComponent {
+	width: 30%;
+}
+
+#statLineComponent {
+	height: 120%;
+}
+
+#dayDoughtNutComponent {
+	height: 130%;
+}
+
+#dayDoughtNutComponent .bodyContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	padding: 24px;
+	overflow-y: auto;
+	box-sizing: border-box;
+}
+
+.commentTileContainer {
+	border-radius: 34px;
+	border: solid 1px $grayColor;
+	padding: 0px 18px;
+	margin: 5px 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	transition: all 0.2s ease-in-out;
+
+	width: 100%;
+	box-sizing: border-box;
+	height: 36px;
+}
+
+.userCommentText {
+	font-size: 14px;
+	color: $whiteColor;
+	display: flex;
 }
 
 .headerBtn {
@@ -119,6 +180,7 @@
 	width: 100%;
 	height: 100%;
 	border: solid 1px $grayColor;
+	overflow: hidden;
 }
 
 .componentHeader {
