--- a/task_buddies_react_app-main/src/styles/Dashboard.scss
+++ b/task_buddies_react_app-main/src/styles/Dashboard.scss
@@ -8,15 +8,15 @@
 }
 
 #firstColumn {
-	width: 30%;
+	width: 32%;
 }
 
 #secondColumn {
-	width: 25%;
+	width: 26%;
 }
 
 #thirdColumn {
-	width: 45%;
+	width: 40%;
 }
 
 #taskFormComponent {
@@ -27,13 +27,13 @@
 	width: 30%;
 }
 
-#statLineComponent {
-	height: 120%;
-}
+// #statLineComponent {
+// 	height: 120%;
+// }
 
-#dayDoughtNutComponent {
-	height: 130%;
-}
+// #dayDoughtNutComponent {
+// 	height: 130%;
+// }
 
 #dayDoughtNutComponent .bodyContainer {
 	display: flex;
@@ -47,7 +47,7 @@
 	box-sizing: border-box;
 }
 
-.commentTileContainer {
+.tileContainer {
 	border-radius: 34px;
 	border: solid 1px $grayColor;
 	padding: 0px 18px;
@@ -56,7 +56,6 @@
 	align-items: center;
 	justify-content: space-between;
 	transition: all 0.2s ease-in-out;
-
 	width: 100%;
 	box-sizing: border-box;
 	height: 36px;
@@ -66,6 +65,19 @@
 	font-size: 14px;
 	color: $whiteColor;
 	display: flex;
+	align-items: center;
+	align-items: baseline;
+	gap: 8px;
+	height: 16px;
+}
+
+.commentTileContainer {
+	border-radius: 34px;
+	padding: 0px 18px;
+	margin: -12px 0px 0px 0px;
+	width: 100%;
+	word-wrap: break-word;
+	box-sizing: border-box;
 }
 
 .headerBtn {
@@ -78,7 +90,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: 2s;
+	transition: 0.5s;
+
 	color: $whiteColor;
 }
 
@@ -89,7 +102,6 @@
 
 .headerBtn:hover {
 	color: $blueDarkColor;
-	transform: rotate(1080deg);
 }
 
 .closeHeaderBtn {
@@ -103,8 +115,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: 2s;
-	animation: rotateIn 2s;
+	transition: 0.5s;
 }
 
 .closeHeaderBtn svg {
@@ -114,16 +125,6 @@
 
 .closeHeaderBtn:hover {
 	color: $whiteColor;
-	transform: rotate(900deg);
-}
-
-@keyframes rotateIn {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(900deg);
-	}
 }
 
 .taskTileContainer {
@@ -350,12 +351,15 @@
 
 .tagsContainer {
 	display: flex;
+	align-items: center;
 	padding: 6px 24px 6px 24px;
 	width: 100%;
 	box-sizing: border-box;
 	overflow-x: auto;
+	overflow-y: hidden;
 	gap: 6px;
 	border-bottom: 1px solid $grayColor;
+	box-sizing: border-box;
 }
 
 .tagColor.active {
