Add login verification

--- a/task_buddies_react_app-main/src/styles/Auth.scss
+++ b/task_buddies_react_app-main/src/styles/Auth.scss
@@ -47,6 +47,11 @@ input {
 	justify-content: space-between;
 }
 
+.errorMsg {
+	color: $redColor;
+	font-size: 12px;
+}
+
 // Responsive
 
 @media screen and (max-width: 768px) {
